# kg_fact_checking

./: .gitignore  README.md  batch_annotate_in_out_entities.py  check_data.ipynb  constrained_decoding.ipynb  convert_sample_to_graph_training_format.py  create_sft_data.ipynb  initial_processing_factkg.py  interact_openai_batch.ipynb  pyproject.toml  start_vllm_server.sh  temp.ipynb  z_commit_and_push.sh  z_temp.ipynb  z_todo.txt
axolotl_config/: specialized_llm.yaml
openai_batch/batch_results/: batch_results_annotate_in_out_entities.jsonl
scripts/: annotate_in_out_entities.sh  annotate_reverse_relation.sh  batch_annotate_in_out_entities.sh  convert_sample_to_graph_training_format.sh  initial_processing_factkg.sh  process_kg_to_trie.sh  process_sample_to_graph_training_format.sh
src/: annotate_in_out_entities.py  batch_annotate_in_out_entities.py  convert_sample_to_graph_format.py  convert_sample_to_graph_training_format.py  initial_processing_factkg.py
src/constrained_decoding/: __init__.py  constrained_decoding.py
src/hf_utils/: llm_generate.py
src/openai_utils/: __init__.py
src/prompts/: __init__.py  generate_pseudo_graph.py
src/utils/: __init__.py  conversation_converter.py  custom_constraint.py  hf_llm_generate.py  json_parser.py  load_data.py  vllm_utils.py  z_test_custom_constraint.py
utils/: __init__.py  convert_sample_to_graph_format.py  custom_constraint.py
utils/examples/: custom_trie_demo.py  phrasal_constraint_demo.py
workflow/data_process/: initial_processing_factkg.py  process_convert_sample_to_graph_training_format.py  (+1 more)
(+6 files in other folders)
