[tool.poetry]
name = "graph-checking"
version = "0.1.0"
description = ""
authors = ["Phạm Hoàng <hoang1482002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.54.4"
python-dotenv = "^1.0.1"
tenacity = "^9.0.0"
datasets = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
